# investAnalyze

./: DEPLOYMENT_GUIDE.md  README.md  app.py  pyproject.toml  replit.md
pages/: mutual_fund_analysis.py  stock_analysis.py
utils/: ai_predictor.py  chart_creator.py  data_fetcher.py  news_analyzer.py
