[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
    "textblob>=0.19.0",
    "yfinance>=0.2.64",
]
